@startuml

title Gym Management System - Class Diagram

class User {
    - int userId
    - String passwordHash
    - String email
    - String phone
    - String address
    - String role
}

class Admin extends User
class Trainer extends User {
    - List<Integer> assignedClassIds
}

class Member extends User {
    - List<Integer> enrolledClassIds
}

class Membership {
    - int membershipId
    - int memberId
    - String membershipType
    - double membershipCost
    - int credits
    - Date startDate
    - Date endDate
}

class WorkoutClass {
    - int classId
    - String className
    - Timestamp schedule
    - int capacity
    - int trainerId
}

class MemberClass {
    - int memberId
    - int classId
}

User <|-- Admin
User <|-- Trainer
User <|-- Member
Member "1" -- "0..*" Membership
Trainer "1" -- "0..*" WorkoutClass
Member "1" -- "0..*" MemberClass
WorkoutClass "1" -- "0..*" MemberClass

@enduml
